
23. Jan. 2002
- Did move the BCB and bufl_init to bdos/fsbuf.c (MAD)
- updated po/de.po po/fr.po for Fast-RAM texts (MAD)
- did put BPB in bios/blkdev.h (MAD)

25. Jan. 2002
- Did put drvbit stuff into bios/blkdev.c (MAD)
- cleaned up bios/bios.c a bit (MAD)

26. Jan. 2002
- make nodepend does not alter Makefile unnecessarily (faster CVS?) (LVL)
- ramtos reloc address derived automatically (RAMTOS works again) (LVL)
- bdos/pkgmld.c: PF_FASTLOAD implemented, deleted old implementation (LVL)
- bdos/umem.c: has_ttram properly set in Maddalt() (LVL)
- bdos/proc.c: deleted old Pexec implementation (LVL)
- panic() prints on screen if linea is inited (LVL)
- added new BDOS memory functions to doc/status.txt (LVL)
- added make target 512 and some related hints in Makefile (MAD)
- added code for Atari disk partitions detecting (unfinished yet) (joy)
- a check for Control key added to the AUTO folder execution (joy)
- #if ARANYM_NATIVE_DISK added to bios/disk.c - so it doesn't kill STonX (joy)

27. Jan. 2002
- changed kcprintf() calls in panic() to vkcprintf for good CR/LF (MAD)
- drive and partition scanning finished (joy)
- initinfo shows the available gemdos logical drives (joy)

28. Jan. 2002
- 1-bit color depth on Falcon now in proper black-on-white colors (joy)
- machine_init() split to two phases - machine_detect() can be called very
  early() and new machine_init() creates cookies etc. (joy)
- screen.c now detects proper screen size from VIDEL registers - there's no
  more trash on the screen - the size is set to 640x480 (joy)
- lineainit.c sets the variables according to proper screen resolution (joy)
- fixed BDOS 16-bit FAT - integer computing was overflowing in fsdrive.c (joy)

30. Jan. 2002
- bdos/osmem.c variables init fixed. (joy)
- bios/blkdev.c - mediach returns "not changed" status for hard drives (joy)
- bios/machine.c - _FRB buffer for DMA operations to FastRAM added (joy)
- bios/floppy.c - floppy rwabs now use _FRB if destination is in FastRAM (joy)